manifests/home-assistant/home-assistant/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: home-assistant
spec:
  serviceName: home-assistant
  template:
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        # fsGroup: 9001
        # runAsGroup: 9001
        # runAsUser: 9001
      containers:
      - image: homeassistant/home-assistant
        name: home-assistant
        securityContext:
          runAsNonRoot: true
          privileged: false
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - all
        # livenessProbe:
        #   timeoutSeconds: 5
        #   periodSeconds: 15
        #   httpGet:
        #     path: /
        #     port: http
        # startupProbe:
        #   initialDelaySeconds: 30
        #   periodSeconds: 15
        #   failureThreshold: 20
        #   timeoutSeconds: 5
        #   httpGet:
        #     path: /
        #     port: http
        ports:
        - containerPort: 8123
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: home-assistant-pvc-config
