manifests/home-assistant/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - secretName: home-assistant-ingress-tls
    hosts:
    - &hostname home-assistant.cluster.hlnr.de
  rules:
  - host: *hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              name: http
